@@ -1,5 +1,14 @@
 2005-03-23  mallum,,,  <mallum@openedhand.com>
 
+	* cltr.c: (cltr_photo_grid_populate), (cltr_photo_grid_redraw),
+	(cltr_photo_grid_new), (main):
+	* cltr.h:
+	Various minor tweaks
+	* pixbuf.c: (pixbuf_set_pixel), (pixbuf_get_pixel):
+	Fix RGBA ordering in set/get pixel
+
+2005-03-23  mallum,,,  <mallum@openedhand.com>
+
 	* cltr.c: (ctrl_photo_grid_get_trans_coords),
 	Fix grid co-ords -> translation vals converter
 	(cltr_photo_grid_navigate), (cltr_photo_grid_redraw),
